--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,14 +38,18 @@ dependencies:
   hive_flutter: ^1.1.0
   intl: ^0.19.0
   modal_progress_hud_nsn: ^0.5.1
-
+  scrollable_positioned_list: ^0.3.8
+  flutter_native_splash: ^2.3.13
+    
 dev_dependencies:
   build_runner: ^2.4.8
   flutter_lints: ^3.0.0
   flutter_test:
     sdk: flutter
   hive_generator: ^2.0.1
-
+flutter_native_splash:
+  image: "lib/assets/3240.png_1200.png"
+  color: "#03fc45"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter packages.
@@ -57,8 +61,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - lib/assets/3240.png_1200.png
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
